update tutorial